kubernetes-networks/canary/service-canary.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-canary
  namespace: canary
spec:
  selector:
    app: app-canary
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
