kubernetes-networks/canary/ingress-main.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  namespace: canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /canary(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-main
                port:
                  number: 8080
